# jobscout-bot

./: .env.example  .gitignore  Procfile  README.md  change_logs.md  jobscout  pyproject.toml  requirements.txt  vercel.json
.do/: app.yaml
.github/workflows/: ci.yml  daily-scan.yml  deploy.yml  preview.yml  scoring.yml
ai-working-docs/: career-ops-research-summary.md  code-review-and-improvement-plan.md  worker-migration-guidance.md
ai-working-docs/autoapply/: DESIGN.md  PLAN.md
ai-working-docs/uidesign-260625/: JobScout — UI Design Specification.md
api/: index.py
app/: __init__.py  auth.py  cli.py  company_presets.py  config.py  crypto.py  db.py  invites.py  llm_providers.py  logging_config.py  main.py  mcp_server.py  models.py  ratelimit.py  schemas.py  timeutil.py
app/routers/: admin.py  applications.py  auth.py  companies.py  cron.py  interests.py  llm_config.py  pages.py  positions.py  profile.py  reports.py  resumes.py  telegram_config.py
app/services/: crawler.py  dispatch.py  evaluator.py  kit_worker.py  kits.py  llm.py  llm_log.py  matcher.py  ollama_client.py  (+11 more)
docs/: COMPANY_FETCH_STATUS.md  DEPLOY.md  DEPLOY_VERCEL.md  DESIGN.md  PLAN.md  SPEC.md  ci.md  preview-deploys.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
supabase/: config.toml
tests/: conftest.py  test_app.py  test_application_history.py  test_e2e_workflow.py  test_invite_ratelimit.py  test_rescore.py  test_salary.py  test_scoring_queue.py  test_scraper_location.py  test_secret_encryption.py  test_smoke.py  test_url_lookup.py
(+101 files in other folders)
